--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,44 @@
     background-color: yellow;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+thead th:nth-child(1) {
+    width: 25%;
+}
+
+thead th:nth-child(2) {
+    width: 25%;
+}
+
+thead th:nth-child(3) {
+    width: 50%;
+}
+
+th {
+    background-color: rgb(0, 119, 255);
+    color: white;
+}
+
+th,td {
+    text-align: left;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: lightblue;
+}
+
+
+
+
+
+
+
+
+
 
 
 
